# agile-mcp-server

./: .env.example  .gitignore  Makefile  README.md  api_demo.py  mcp_schema.json  pyproject.toml  server.py  tasks.ps1
auth/: __init__.py  context.py  jwt.py  permissions.py  request_auth.py  tool_auth.py
client/: ir_schema.py  main.py  parser.py  prompt_builder.py  router.py
data/: mock_store.py  repository.py
docs/: api_adapter_design.md  api_integration_questions.md  architecture.md  debugging_playbook.md  deployment_sse.md  discharge_template.md  domain_glossary.md  input_guardrails.md  ir_schema.json  jwt_auth.md  logging_policy.md  meeting_notes_2026_05_06.md  safety_rules.md  theoretical_framework.md  uncertainty_limits.md
features/: cohort.py  patient_lookup.py  patient_summary.py
guardrails/: __init__.py  decision.py  evaluation.py  input_guardrail.py  policy.py
orchestrator/: __init__.py  ir_schema.py  main.py  parser.py  renderer.py  router.py  validator.py
rag/: __init__.py  context_builder.py  documents.py
retrieval/: __init__.py  base.py  keyword.py
scripts/: demo_jwt.py  demo_orchestrator.py  demo_rag.py  eval.py  eval_guardrails.py  eval_input_guardrails.py  export_schema.py
tests/: test_auth_api.py  test_auth_jwt.py  test_auth_mcp_helpers.py  test_auth_permissions.py  test_auth_request.py  test_client.py  test_features.py  test_guardrails_decision.py  test_guardrails_integration.py  test_guardrails_policy.py  test_input_guardrail_api.py  test_input_guardrail_llm_classifier.py  test_input_guardrail_policy.py  test_orchestrator_parser.py  (+7 more)
(+10 files in other folders)
