[project]
name = "agile-mcp-server"
version = "0.3.0"
description = "MCP server POC — uncertainty-aware NL2API for hospital management, Agile S.r.l. internship"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.0.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
eval = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "features*", "workflow*", "orchestrator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
